--- a/MobSales.DroidUI/Resources/Layout/test_frag.axml
+++ b/MobSales.DroidUI/Resources/Layout/test_frag.axml
@@ -3,8 +3,9 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-	<fragment
-		class="mobsales.droidui.TitlesFragment"
+	<!--<Cirrious.MvvmCross.Binding.Android.Views.MvxBindingFragment-->
+	<Fragment
+		class="mobsales.droidui.views.fragments.TitlesFragment"
 		android:id="@+id/titles_fragment"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
