--- a/MobSales.DroidUI/Resources/Layout/test_frag.axml
+++ b/MobSales.DroidUI/Resources/Layout/test_frag.axml
@@ -4,9 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 	<!--<Cirrious.MvvmCross.Binding.Android.Views.MvxBindingFragment-->
-	<Fragment
+	<fragment
 		class="mobsales.droidui.views.fragments.TitlesFragment"
-		android:id="@+id/titles_fragment"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 			  />
